--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -32,6 +32,7 @@
     </style>
   </head>
   <body>
+    <main>
     <div class="container">
       <div class="card">
         <img
@@ -58,5 +59,6 @@
       >. Coded by
       <a href="https://www.frontendmentor.io/profile/starjul">Starjul</a>.
     </div>
+  </main>
   </body>
 </html>
