--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -32,8 +32,7 @@
     </style>
   </head>
   <body>
-    <main>
-    <div class="container">
+    <main class="container">
       <div class="card">
         <img
           src="./images/image-qr-code.png"
@@ -50,7 +49,7 @@
           </p>
         </div>
       </div>
-    </div>
+    </main>
 
     <div class="attribution">
       Challenge by
