--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,17 +15,18 @@
 
 <body>
   <main>
-    <div class="container" <div class="card">
-      <img src="./images/image-qr-code.png" class="qrCode-img" alt="QR code" />
-      <div class="text-body">
-        <h1 class="header2">
-          Improve your front-end skills by building projects
-        </h1>
-        <p class="text">
-          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-        </p>
+    <div class="container">
+      <div class="card">
+        <img src="./images/image-qr-code.png" class="qrCode-img" alt="QR code" />
+        <div class="text-body">
+          <h1 class="header2">
+            Improve your front-end skills by building projects
+          </h1>
+          <p class="text">
+            Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
   </main>
 
   <div class="attribution">
